force-app/main/default/objects/Team_Member__c/fields/Alternate__c.field-meta.xml
<CustomField>
    <fullName>Alternate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Please select who the alternate is in case the team member is not available.</description>
    <inlineHelpText>Please select who the alternate is in case the team member is not available.</inlineHelpText>
    <label>Alternate</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Alternates</relationshipName>
    <type>Lookup</type>
</CustomField>