force-app/main/default/objects/Team_Member__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Date field to store the end date the person was in the role</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>