force-app/main/default/objects/Team_Member__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Distribution List Members</relationshipLabel>
    <relationshipName>Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>