force-app/main/default/objects/Team_Member__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Project role that describes your involvement in the project, not necessary same as your job title.</description>
    <inlineHelpText>Choose the role that describes best your involvement in the project. Can be different than your job title.</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Construction Coordinator</fullName>
            </value>
            <value>
                <fullName>CVI Rep</fullName>
            </value>
            <value>
                <fullName>Financial controller</fullName>
            </value>
            <value>
                <fullName>GER Advisor</fullName>
            </value>
            <value>
                <fullName>IO IPD Coordinator</fullName>
            </value>
            <value>
                <fullName>IO PPC Coordinator</fullName>
            </value>
            <value>
                <fullName>IOR IPD Coordinator</fullName>
            </value>
            <value>
                <fullName>IOR PPC Coordinator</fullName>
            </value>
            <value>
                <fullName>MA IPD Coordinator</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PSA representative</fullName>
            </value>
            <value>
                <fullName>IO Financial Controller</fullName>
            </value>
            <value>
                <fullName>IOR Financial Controller</fullName>
            </value>
            <value>
                <fullName>MA Financial Controller</fullName>
            </value>
            <value>
                <fullName>MSA</fullName>
            </value>
            <value>
                <fullName>Project Contributor</fullName>
            </value>
            <value>
                <fullName>Global Project Manager</fullName>
            </value>
            <value>
                <fullName>Global MEL Advisor</fullName>
            </value>
            <value>
                <fullName>Regional Coordinator</fullName>
            </value>
            <value>
                <fullName>Sos Youth Can Coordinator</fullName>
            </value>
            <value>
                <fullName>Global Partner</fullName>
            </value>
            <value>
                <fullName>Local Partner</fullName>
            </value>
            <value>
                <fullName>Programme Planning Advisor</fullName>
            </value>
            <value>
                <fullName>Sustainable Construction Solution Project Manager</fullName>
            </value>
            <value>
                <fullName>YouthCan! Global MEL Advisor</fullName>
            </value>
            <value>
                <fullName>YouthCan! Global Project Manager</fullName>
            </value>
            <value>
                <fullName>YouthCan! Key Account Manager</fullName>
            </value>
            <value>
                <fullName>YouthCan! Regional Coordinator</fullName>
            </value>
            <value>
                <fullName>YouthCan! Coordinator</fullName>
            </value>
            <value>
                <fullName>YouthCan! Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>