force-app/main/default/objects/Team_Member__c/fields/Runnng_User__c.field-meta.xml
<CustomField>
    <fullName>Runnng_User__c</fullName>
    <formula>IF(User__c = $User.Id, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Runnng User?</label>
    <type>Checkbox</type>
</CustomField>