force-app/main/default/objects/Team_Member__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date field to store the start date the person was in the role</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>