force-app/main/default/objects/Team_Member__c/fields/User_Title__c.field-meta.xml
<CustomField>
    <fullName>User_Title__c</fullName>
    <formula>User__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Title</label>
    <type>Text</type>
</CustomField>