force-app/main/default/objects/Team_Member__c/recordTypes/Distribution_List_Member.recordType-meta.xml
<RecordType>
    <fullName>Distribution_List_Member</fullName>
    <active>true</active>
    <description>Someone who is associated with this Organisation and should therefore be added to all Projects that are run in collaboration with this Organisation.</description>
    <label>Distribution List Member</label>
</RecordType>