force-app/main/default/objects/Team_Member__c/recordTypes/Project_Team_Member.recordType-meta.xml
<RecordType>
    <fullName>Project_Team_Member</fullName>
    <active>true</active>
    <description>Someone who is Associated with this Organisation via a Project. DO NOT use this Record Type from an Organisation record - ONLY from a Project record</description>
    <label>Project Team Member</label>
</RecordType>