force-app/main/default/objects/Team_Member__c/recordTypes/Project_Team_Member_External.recordType-meta.xml
<RecordType>
    <fullName>Project_Team_Member_External</fullName>
    <active>true</active>
    <description>Clone for Project Team Member with only &quot;Project Contributor&quot; as Role</description>
    <label>Project Team Member External</label>
</RecordType>