force-app/main/default/objects/Team_Member__c/recordTypes/SOS_YouthCan_Team_Member.recordType-meta.xml
<RecordType>
    <fullName>SOS_YouthCan_Team_Member</fullName>
    <active>true</active>
    <label>SOS YouthCan Team Member</label>
</RecordType>