force-app/main/default/objects/Team_Member__c/validationRules/Project_Account_Team_missing.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Account_Team_missing</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
OR(TEXT(Role__c) = &quot;Project Contributor&quot;,
TEXT(Role__c) =&quot;&apos;YouthCan! Global MEL Advisor&quot;,
TEXT(Role__c) =&quot;&apos;YouthCan! Global Project Manager&quot;,
TEXT(Role__c) =&quot;&apos;YouthCan! Key Account Manager&quot;,
TEXT(Role__c) =&quot;&apos;YouthCan! Regional Coordinator&quot;,
TEXT(Role__c) =&quot;&apos;YouthCan! Coordinator&quot;,
TEXT(Role__c) =&quot;&apos;YouthCan! Partner&quot;),
Active__c,
ISBLANK(Project__r.Account_Teams__c)
)</errorConditionFormula>
    <errorMessage>You are trying to add a Project Contributor but the &quot;External Project Team&quot; field on your Project is blank. Please ensure that this value is filled in before adding a Project Contributor.</errorMessage>
</ValidationRule>