force-app/main/default/objects/Team_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Organisation__c</columns>
    <columns>Project__c</columns>
    <columns>User__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type__c</columns>
    <columns>Role__c</columns>
    <columns>Active__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User__c</field>
        <operation>equals</operation>
        <value>moussa ouedraogo</value>
    </filters>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>