force-app/main/default/objects/Team_Member__c/listViews/Projects_where_I_m_a_member.listView-meta.xml
<ListView>
    <fullName>Projects_where_I_m_a_member</fullName>
    <columns>Project__c</columns>
    <columns>Role__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Runnng_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Projects Where I&apos;m a Member</label>
</ListView>